// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup scenarios 1`] = `
<div
  className="sc-AxiKw jCtEIX"
>
  <div
    className="sc-AxirZ gHoGsv"
  >
    <div
      style={
        Object {
          "width": "300px",
        }
      }
    >
      <h2>
        This is a popup
      </h2>
      <p>
        And this is a paragraph
      </p>
    </div>
  </div>
</div>
`;

exports[`Popup scenarios 2`] = `
<div
  className="sc-AxiKw kWKImv"
>
  <div
    className="sc-AxirZ gHoGsv"
  >
    <div
      style={
        Object {
          "width": "300px",
        }
      }
    >
      <h2>
        This is a opaque popup
      </h2>
      <p>
        And this is a paragraph
      </p>
    </div>
  </div>
</div>
`;

exports[`Popup scenarios 3`] = `
<div
  className="sc-AxiKw kWKImv"
>
  Test
</div>
`;

exports[`Popup scenarios 4`] = `
<div
  className="sc-AxiKw kWKImv"
>
  Test
</div>
`;
